Ajout de la récupération dynamique des en-têtes et pieds de page via fetch dans favoris.html et index.html

--- a/SAE3.01-SAE3.03---UX-Visualisations-de-donn-es/src/Faq.html
+++ b/SAE3.01-SAE3.03---UX-Visualisations-de-donn-es/src/Faq.html
@@ -101,8 +101,8 @@
                     </p>
                 </div>
 
-                 <!-- Question 8 -->
-                 <div class="bg-white rounded-lg shadow-md p-4 md:p-6">
+                <!-- Question 8 -->
+                <div class="bg-white rounded-lg shadow-md p-4 md:p-6">
                     <h4 class="text-lg md:text-xl font-semibold">Comment NaMaster me guide-t-il vers les meilleures
                         opportunités de stage ?</h4>
                     <p class="mt-2 text-sm md:text-base text-gray-600">
@@ -153,7 +153,8 @@
                 <!-- Questions sur l'équipe -->
                 <div class="bg-gray-200 rounded-lg shadow-md p-4 md:p-6">
                     <h4 class="text-lg md:text-xl font-semibold">Questions sur l'équipe</h4>
-                    <button id="toggle-team-questions" class="mt-2 bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">
+                    <button id="toggle-team-questions"
+                        class="mt-2 bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">
                         Voir la catégorie
                     </button>
 
@@ -162,50 +163,69 @@
                         <div class="bg-white rounded-lg shadow-md p-4 md:p-6">
                             <h4 class="text-lg md:text-xl font-semibold">Tony, d'où viens ta créativité ?</h4>
                             <p class="mt-2 text-sm md:text-base text-gray-600">
-                                Ma créativité ? Elle naît là où les idées se croisent, comme dans un grand film d’action. Quand
-                        je joue Garen sur la Faille de l'Invocateur, chaque "DEMACIA !" résonne comme une explosion
-                        d’inspiration. L’énergie de la bataille nourrit mes projets, tout comme les films épiques de
-                        Marvel et Transformers, où chaque scène me pousse à repousser mes limites créatives. Et bien
-                        sûr, tout ça ne serait pas possible sans un peu de passion, de bonté et de courage, à la manière
-                        d'Optimus Prime !
+                                Ma créativité ? Elle naît là où les idées se croisent, comme dans un grand film
+                                d’action. Quand
+                                je joue Garen sur la Faille de l'Invocateur, chaque "DEMACIA !" résonne comme une
+                                explosion
+                                d’inspiration. L’énergie de la bataille nourrit mes projets, tout comme les films
+                                épiques de
+                                Marvel et Transformers, où chaque scène me pousse à repousser mes limites créatives. Et
+                                bien
+                                sûr, tout ça ne serait pas possible sans un peu de passion, de bonté et de courage, à la
+                                manière
+                                d'Optimus Prime !
                             </p>
                         </div>
 
                         <!-- Question sur David -->
                         <div class="bg-white rounded-lg shadow-md p-4 md:p-6">
-                            <h4 class="text-lg md:text-xl font-semibold">David, quelle est ta source secrète d'inspiration ?</h4>
+                            <h4 class="text-lg md:text-xl font-semibold">David, quelle est ta source secrète
+                                d'inspiration ?</h4>
                             <p class="mt-2 text-sm md:text-base text-gray-600">
-                                Mon inspiration ? Elle vient de tout ce qui fait avancer la technologie ! Mais je dois avouer
-                        que parfois, l'inspiration arrive lors d'une bonne session de codage, où chaque ligne de code me
-                        rapproche de l'illumination. Quand ça chauffe trop, il n'y a rien de mieux qu'une bonne
-                        "Ressurection" à la Mercy pour me donner un second souffle. Le code et les éclats de lumière
-                        d’Overwatch m'aident à garder le cap, même dans les moments les plus tendus.
+                                Mon inspiration ? Elle vient de tout ce qui fait avancer la technologie ! Mais je dois
+                                avouer
+                                que parfois, l'inspiration arrive lors d'une bonne session de codage, où chaque ligne de
+                                code me
+                                rapproche de l'illumination. Quand ça chauffe trop, il n'y a rien de mieux qu'une bonne
+                                "Ressurection" à la Mercy pour me donner un second souffle. Le code et les éclats de
+                                lumière
+                                d’Overwatch m'aident à garder le cap, même dans les moments les plus tendus.
                             </p>
                         </div>
 
                         <!-- Question sur Alexis -->
                         <div class="bg-white rounded-lg shadow-md p-4 md:p-6">
-                            <h4 class="text-lg md:text-xl font-semibold">Alexis, comment gardes-tu ton calme en pleine tempête
+                            <h4 class="text-lg md:text-xl font-semibold">Alexis, comment gardes-tu ton calme en pleine
+                                tempête
                                 de code ?</h4>
                             <p class="mt-2 text-sm md:text-base text-gray-600">
-                                Quand ça chauffe sur le backend, il n'y a rien de mieux que de rester zen. Parfois, une session
-                        de méditation rapide ou une petite balade pour aérer le cerveau, et je suis prêt à revenir pour
-                        déboguer avec toute la sérénité d’un maître zen ! Le code n’a plus de secrets pour moi, même
-                        quand les serveurs sont en mode rébellion.
+                                Quand ça chauffe sur le backend, il n'y a rien de mieux que de rester zen. Parfois, une
+                                session
+                                de méditation rapide ou une petite balade pour aérer le cerveau, et je suis prêt à
+                                revenir pour
+                                déboguer avec toute la sérénité d’un maître zen ! Le code n’a plus de secrets pour moi,
+                                même
+                                quand les serveurs sont en mode rébellion.
                             </p>
                         </div>
 
                         <!-- Question sur Romain -->
                         <div class="bg-white rounded-lg shadow-md p-4 md:p-6">
-                            <h4 class="text-lg md:text-xl font-semibold">Romain, quel est ton secret pour être à la fois créatif
+                            <h4 class="text-lg md:text-xl font-semibold">Romain, quel est ton secret pour être à la fois
+                                créatif
                                 et développeur ?</h4>
                             <p class="mt-2 text-sm md:text-base text-gray-600">
-                                Mon secret ? C’est tout dans mes cheveux roux ! Quand je code, ils prennent feu d'idées. Il
-                        paraît même qu’une mèche de ma chevelure enflammée a inspiré la dernière fonctionnalité sur
-                        laquelle je travaille. Ma créativité carbure à pleine vitesse, un peu comme ma voiture rouge,
-                        qui n'est pas seulement là pour me conduire, mais aussi pour m'aider à garder ce flair audacieux
-                        dans chaque projet. On dit que l'inspiration frappe fort, mais moi, elle a carrément les cheveux
-                        dans le vent !
+                                Mon secret ? C’est tout dans mes cheveux roux ! Quand je code, ils prennent feu d'idées.
+                                Il
+                                paraît même qu’une mèche de ma chevelure enflammée a inspiré la dernière fonctionnalité
+                                sur
+                                laquelle je travaille. Ma créativité carbure à pleine vitesse, un peu comme ma voiture
+                                rouge,
+                                qui n'est pas seulement là pour me conduire, mais aussi pour m'aider à garder ce flair
+                                audacieux
+                                dans chaque projet. On dit que l'inspiration frappe fort, mais moi, elle a carrément les
+                                cheveux
+                                dans le vent !
                             </p>
                         </div>
                     </div>
@@ -220,49 +240,63 @@
 
     <script>
         document.addEventListener('DOMContentLoaded', () => {
+            // Utiliser fetch pour récupérer le contenu du fichier header.html
             fetch('header.html')
                 .then(response => response.text())
                 .then(data => {
+                    // Insérer le contenu récupéré dans l'élément avec l'ID 'header-container'
                     document.getElementById('header-container').innerHTML = data;
 
                     const burgerBtn = document.getElementById('burger-btn');
                     const menu = document.getElementById('menu');
 
+                    // Si l'élément burger-btn existe, ajouter un écouteur d'événement pour le clic
                     if (burgerBtn) {
                         burgerBtn.addEventListener('click', () => {
+                            // Basculer la classe 'hidden' sur l'élément menu pour afficher/masquer le menu
                             menu.classList.toggle('hidden');
                         });
                     }
                 })
+                // Si une erreur se produit lors du chargement du header, elle est capturée et affichée dans la console
                 .catch(error => console.error('Error loading header:', error));
 
+            // Utiliser fetch pour récupérer le contenu du fichier footer.html
             fetch('footer.html')
                 .then(response => response.text())
                 .then(data => {
+                    // Insérer le contenu récupéré dans l'élément avec l'ID 'footer-container'
                     document.getElementById('footer-container').innerHTML = data;
                 })
+                // Si une erreur se produit lors du chargement du footer, elle est capturée et affichée dans la console
                 .catch(error => console.error('Error loading header:', error));
         });
 
     </script>
     <script>
         document.addEventListener('DOMContentLoaded', () => {
-    const toggleButton = document.getElementById('toggle-team-questions');
-    const teamQuestions = document.getElementById('team-questions');
+            const toggleButton = document.getElementById('toggle-team-questions');
+            const teamQuestions = document.getElementById('team-questions');
 
-    if (!toggleButton) {
-        console.error("Le bouton avec l'ID 'toggle-team-questions' n'a pas été trouvé !");
-    }
-    if (!teamQuestions) {
-        console.error("L'élément avec l'ID 'team-questions' n'a pas été trouvé !");
-    }
+            // Vérifier si le bouton avec l'ID 'toggle-team-questions' existe
+            if (!toggleButton) {
+                console.error("Le bouton avec l'ID 'toggle-team-questions' n'a pas été trouvé !");
+            }
+            // Vérifier si l'élément avec l'ID 'team-questions' existe
+            if (!teamQuestions) {
+                console.error("L'élément avec l'ID 'team-questions' n'a pas été trouvé !");
+            }
 
-    toggleButton.addEventListener('click', () => {
-        teamQuestions.classList.toggle('hidden');
-        toggleButton.textContent = teamQuestions.classList.contains('hidden')
-            ? 'Voir la catégorie'
-            : 'Masquer la catégorie';
-    });
-});
+            // Ajouter un écouteur d'événement pour le clic sur le bouton toggleButton
+            toggleButton.addEventListener('click', () => {
+                // Basculer la classe 'hidden' sur l'élément teamQuestions pour afficher/masquer les questions
+                teamQuestions.classList.toggle('hidden');
+                // Mettre à jour le texte du bouton en fonction de l'état de l'élément teamQuestions
+                toggleButton.textContent = teamQuestions.classList.contains('hidden')
+                    ? 'Voir la catégorie'
+                    : 'Masquer la catégorie';
+            });
+        });
     </script>
 </body>
+</html>
