--- a/SAE3.01-SAE3.03---UX-Visualisations-de-donn-es/src/favoris.html
+++ b/SAE3.01-SAE3.03---UX-Visualisations-de-donn-es/src/favoris.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vos Favoris</title>
+    <title>favoris</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="./js/bgMenu.js"></script>
 
